# src/infra/web/routes/habitCompDate.routes.ts
@@ -13,6 +13,17 @@ const habitController = new HabitCompDateController(
 );
 
 habitCompDateRouter.get('/', habitController.index);
-habitCompDateRouter.post('/', habitController.complete);
+habitCompDateRouter.post(
+  '/',
+  /*  #swagger.parameters['obj'] = {
+    in: 'body',
+    description: 'complete/uncomplete a habit',
+    schema: {
+        $habitId: 'habit uuid',
+        $completedDate: '2023-09-26T00:00:00.000Z'
+    }
+  } */
+  habitController.complete,
+);
 
 export { habitCompDateRouter };
